@@ -1,4 +1,5 @@
 2006-10-05  Alex Roitman  <shura@gramps-project.org>
+	* src/DataViews/_PersonView.py (set_inactive): Check active status.
 	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_11): Upgrade
 	addresses in repositories.
 	* src/Config/_GrampsConfigKeys.py: Regenerate file (proper type
